# pycamtasia

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: PUBLISHING.md  camtasia-format-reference.md  conf.py  index.md  installation.md  overview.md  quickstart.md  requirements.txt
docs/api/: annotations.rst  app_validation.rst  audiate.rst  authoring_client.rst  builders.rst  canvas_presets.rst  captions.rst  clips.rst  color.rst  effects.rst  export.rst  extras.rst  frame_stamp.rst  history.rst  library.rst  markers.rst  media_bin.rst  operations.rst  project.rst  screenplay.rst  templates.rst  themes.rst  timeline.rst  timing.rst  transitions.rst  types.rst  validation.rst
docs/concepts/: camtasia-file-format.md  clip-ontology.md  effect-system.md  project-model.md  the-two-api-layers.md  timing.md  undo-and-history.md  validation-model.md
docs/development/: design-decisions.md  integration-findings-2026-05-01.md  publishing.md
docs/development/reviews/: .gitkeep  api_consistency.jsonl  api_docs.jsonl  concurrency.jsonl  docstrings.jsonl  edge_cases.jsonl  error_handling.jsonl  finding-schema.json  fuzz.jsonl  license_compliance.jsonl  ops_readiness.jsonl  packaging.jsonl  performance.jsonl  red_team.jsonl  red_team_report.md  resources.jsonl  security.jsonl  test_gaps.jsonl  test_quality.jsonl  typing.jsonl  user_docs.jsonl
docs/development/reviews/repros/: REV-api_consistency-001.py  REV-api_consistency-003.py  REV-api_consistency-005.py  REV-api_consistency-006.py  REV-api_consistency-008.py  REV-api_docs-001_media_bin_autodoc.sh  REV-api_docs-002_media_ops_missing.sh  REV-api_docs-003_private_api_example.sh  REV-concurrency-001.py  REV-concurrency-002.py  REV-docstrings-001.py  REV-docstrings-002.py  REV-docstrings-003.py  REV-docstrings-004.py  REV-edge_cases-001.py  REV-edge_cases-002.py  REV-edge_cases-003.py  REV-edge_cases-004.py  REV-edge_cases-005.py  REV-edge_cases-006.py  REV-edge_cases-007.py  REV-edge_cases-008.py  REV-edge_cases-009.py  REV-edge_cases-010.py  REV-edge_cases-011.py  REV-edge_cases-012.py  REV-edge_cases-013.py  REV-edge_cases-014.py  REV-edge_cases-015.py  REV-error_handling-001.py  REV-error_handling-002.py  REV-error_handling-003.py  REV-error_handling-005.py  REV-fuzz-001.py  REV-fuzz-002.py  REV-fuzz-003.py  REV-fuzz-004.py  REV-fuzz-005.py  REV-fuzz-006.py  REV-fuzz-007.py  (+44 more)
docs/examples/: index.md
docs/guides/: audio-video-sync.md  best-practices.md  camtasia-rev.md  convenience-api.md  cookbook.md  faq.md  features.md  getting-started.md  speed-change.md  template-projects.md  transcripts.md  troubleshooting.md  type-safety.md  undo-redo.md  whats-new.md
examples/: 00_hello_world.py  01_inspect_project.py  02_add_clips.py  03_add_captions.py  04_template_workflow.py  README.md  conftest.py  test_examples.py
scripts/: camtasia_validate.sh  ci-local.sh  consolidate-findings.py  verify-fix-branch.sh
src/camtasia/: __init__.py  app_validation.py  authoring_client.py  canvas_presets.py  cli.py  color.py  effects.py  extras.py  frame_stamp.py  history.py  operations.py  project.py  screenplay.py  themes.py  timing.py  types.py  validation.py  version.py
src/camtasia/annotations/: __init__.py  callouts.py  shapes.py  types.py
src/camtasia/audiate/: __init__.py  project.py  transcript.py
src/camtasia/builders/: __init__.py  device_frame.py  device_frame_library.py  dynamic_background.py  screenplay_builder.py  slide_import.py  tile_layout.py  timeline_builder.py  video_production.py
src/camtasia/effects/: __init__.py  audio.py  audio_visualizer.py  base.py  behaviors.py  cursor.py  source.py  visual.py
src/camtasia/export/: __init__.py  audio.py  campackage.py  captions.py  chapters.py  csv_export.py  edl.py  report.py  srt.py  timeline_json.py  toc.py
src/camtasia/media_bin/: __init__.py  media_bin.py  trec_probe.py
src/camtasia/operations/: __init__.py  batch.py  captions.py  cleanup.py  diff.py  layout.py  media_ops.py  merge.py  recording_sync.py  slide_markers.py  speed.py  stitch.py  sync.py  template.py
src/camtasia/resources/: camtasia-project-schema.json
src/camtasia/resources/new.cmproj/: project.tscproj
src/camtasia/templates/: behavior_presets.py  lower_third.py
src/camtasia/timeline/: __init__.py  captions.py  marker.py  markers.py  timeline.py  track.py  track_media.py  transitions.py
src/camtasia/timeline/clips/: __init__.py  audio.py  base.py  callout.py  group.py  image.py  placeholder.py  screen_recording.py  stitched.py  (+2 more)
tests/: _cursor_effects_already_complete.md  conftest.py  integration_helpers.py  test_annotation_favorites.py  test_annotations.py  test_api_consistency_fixes.py  test_audiate.py  test_audiate_api_extended.py  test_audiate_project.py  test_audiate_transcript_extended.py  test_audio.py  test_audio_controls.py  test_audio_convenience.py  test_audio_visualizer.py  test_background_music.py  test_base_clip_clone_and_match.py  test_base_transforms.py  test_batch_operations.py  test_behavior_presets.py  test_behaviors.py  test_build_from_screenplay_file.py  test_callout.py  test_callout_builder.py  test_callout_sequence.py  test_camtasia_integration.py  test_camtasia_validation.py  test_canvas_presets.py  test_caption_accessibility.py  test_captions.py  test_captions_export.py  test_captions_import_export.py  test_ci_coverage_gaps.py  test_clean_inherited_state.py  test_cleanup.py  test_clip_animations_extended.py  test_clip_coverage.py  test_clip_emphasize.py  test_clip_id_properties.py  test_clip_motion_path.py  test_clip_operations.py  (+271 more)
tests/fixtures/: techsmith_complex_asset.tscproj  techsmith_library_asset.tscproj  techsmith_sample.tscproj  test_project_a.tscproj  test_project_b.tscproj  test_project_c.tscproj  test_project_d.tscproj
