[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycamtasia"
version = "7.0.0"
description = "Python API for reading, writing, and manipulating Camtasia project files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["jsonpatch>=1.33", 'typing_extensions>=4.0; python_version < "3.11"']
authors = [
    { name = "Sixty North AS", email = "austin@sixty-north.com" },
]
keywords = ["camtasia", "video", "editing", "tscproj"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

[project.optional-dependencies]
cli = ["exit-codes>=1.3.0,<2", "docopt-subcommands"]
media = ["pymediainfo"]
docs = ["sphinx", "furo", "myst-parser", "sphinx-autodoc-typehints"]
dev = ["bumpversion", "ruff"]
test = ["pytest", "pytest-cov", "hypothesis", "pytest-xdist", "pytest-timeout", "mypy", "jsonschema"]

[project.urls]
Homepage = "https://github.com/grandmasteri/pycamtasia"
Repository = "https://github.com/grandmasteri/pycamtasia"
Issues = "https://github.com/grandmasteri/pycamtasia/issues"

[project.scripts]
pytsc = "camtasia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
camtasia = ["resources/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto -m 'not integration'"
timeout = 10
tmp_path_retention_policy = "none"
tmp_path_retention_count = 0
markers = [
    "integration: Camtasia integration tests (slow, requires Camtasia app)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.coverage.run]
source = ["camtasia"]
omit = ["*/cli.py", "*/frame_stamp.py", "*/effects.py", "*/track_media.py", "*/trec_probe.py"]

[tool.coverage.report]
fail_under = 99
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
