[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycamtasia"
version = "0.1.0"
description = "Python API for reading, writing, and manipulating Camtasia project files"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["jsonpatch>=1.33,<2.0", 'typing_extensions>=4.0; python_version < "3.11"']
authors = [
    { name = "Isaac Douglas", email = "31323121+grandmasteri@users.noreply.github.com" },
]
keywords = [
    "camtasia",
    "video",
    "editing",
    "tscproj",
    "cmproj",
    "screencast",
    "techsmith",
    "video-production",
    "automation",
    "annotation",
    "captions",
    "transcript",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
cli = ["exit-codes>=1.3.0,<2", "docopt-subcommands"]
media = ["pymediainfo"]
all = ["pycamtasia[cli]", "pycamtasia[media]"]
docs = ["sphinx", "furo", "myst-parser", "sphinx-autodoc-typehints"]
dev = ["bumpversion", "ruff"]
test = ["pytest", "pytest-cov", "hypothesis", "pytest-xdist", "pytest-timeout", "mypy", "jsonschema", "ruff"]

[project.urls]
Homepage = "https://grandmasteri.github.io/pycamtasia/"
Documentation = "https://grandmasteri.github.io/pycamtasia/"
Source = "https://github.com/grandmasteri/pycamtasia"
Issues = "https://github.com/grandmasteri/pycamtasia/issues"
Changelog = "https://github.com/grandmasteri/pycamtasia/blob/main/CHANGELOG.md"

[project.scripts]
pytsc = "camtasia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
camtasia = ["resources/**", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto -m 'not integration'"
timeout = 10
tmp_path_retention_policy = "none"
tmp_path_retention_count = 0
markers = [
    "integration: Camtasia integration tests (slow, requires Camtasia app)",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie (misc lints)
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "E741",   # ambiguous variable name (l, O, I) — common in math code
    "UP007",  # X | None vs Optional — already using this style
    "B905",   # zip without strict= — not needed for our use cases
    "SIM108", # ternary instead of if/else — readability preference
    "RET504", # unnecessary assignment before return — readability preference
    "PT011",  # pytest.raises too broad — we use specific match strings
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "B018", "PT004", "PT012", "SIM300"]

[tool.coverage.run]
source = ["camtasia"]
omit = ["*/cli.py", "*/frame_stamp.py", "*/effects.py", "*/track_media.py", "*/trec_probe.py"]

[tool.coverage.report]
fail_under = 100
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true


[tool.tox]
env_list = ["lint", "typecheck", "test"]

[tool.tox.env.lint]
commands = [["ruff", "check", "src/", "tests/"]]

[tool.tox.env.typecheck]
commands = [["mypy", "src/camtasia/"]]

[tool.tox.env.test]
commands = [["pytest", "tests/", "-n0", "--cov=camtasia", "--cov-report=term-missing", "-q"]]
